force-app/main/default/objects/Delivery_Batch__c/Delivery_Batch__c.object-meta.xml
<CustomObject>
    <description>Contains details about project work part (delivery batch).</description>
    <label>Delivery Batch</label>
    <nameField>
        <displayFormat>DB-{00000000}</displayFormat>
        <label>Delivery Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>