force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Delivery_Date__c</fullName>
    <label>Delivery Date OLD</label>
    <type>Date</type>
</CustomField>