force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Description__c.field-meta.xml
<CustomField>
    <fullName>Batch_Description__c</fullName>
    <description>Description from Salestori.</description>
    <label>Description OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>