force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>Id of the Delivery Batch from Salestori.</description>
    <label>Batch Id OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>