force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Installation_Date__c</fullName>
    <label>Installation Date OLD</label>
    <type>Date</type>
</CustomField>