force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Installation_End__c.field-meta.xml
<CustomField>
    <fullName>Batch_Installation_End__c</fullName>
    <label>Installation End OLD</label>
    <type>Time</type>
</CustomField>