force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Installation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Batch_Installation_Hours__c</fullName>
    <description>Total Installation Time for all Products (RVN) in Batch</description>
    <label>Batch Installation Hours OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>