force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Installation_Start__c.field-meta.xml
<CustomField>
    <fullName>Batch_Installation_Start__c</fullName>
    <label>Installation Start OLD</label>
    <type>Time</type>
</CustomField>