force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <description>Name of the Batch</description>
    <label>Name OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>