force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <description>Batch Number Reference in Opportunity</description>
    <label>Batch Number OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>