force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Order_Date__c</fullName>
    <label>Order Date OLD</label>
    <type>Date</type>
</CustomField>