force-app/main/default/objects/Delivery_Batch__c/fields/Batch_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Release_Date__c</fullName>
    <label>Release Date OLD</label>
    <type>Date</type>
</CustomField>