force-app/main/default/objects/Delivery_Batch__c/fields/BatchDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>BatchDeliveryDate__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>