force-app/main/default/objects/Delivery_Batch__c/fields/BatchDueDate__c.field-meta.xml
<CustomField>
    <fullName>BatchDueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>