force-app/main/default/objects/Delivery_Batch__c/fields/BatchEarliestStartDate__c.field-meta.xml
<CustomField>
    <fullName>BatchEarliestStartDate__c</fullName>
    <label>Earliest Start Date</label>
    <type>Date</type>
</CustomField>