force-app/main/default/objects/Delivery_Batch__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <description>Id of the Delivery Batch from Salestori.</description>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>