force-app/main/default/objects/Delivery_Batch__c/fields/BatchInstallationDate__c.field-meta.xml
<CustomField>
    <fullName>BatchInstallationDate__c</fullName>
    <description>The Planned or Actual Installation Date for the Delivery Batch</description>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>