force-app/main/default/objects/Delivery_Batch__c/fields/BatchInstallationEnd__c.field-meta.xml
<CustomField>
    <fullName>BatchInstallationEnd__c</fullName>
    <label>Installation End</label>
    <type>Time</type>
</CustomField>