force-app/main/default/objects/Delivery_Batch__c/fields/BatchInstallationStart__c.field-meta.xml
<CustomField>
    <fullName>BatchInstallationStart__c</fullName>
    <label>Installation Start</label>
    <type>Time</type>
</CustomField>