force-app/main/default/objects/Delivery_Batch__c/fields/BatchInstallationTime__c.field-meta.xml
<CustomField>
    <fullName>BatchInstallationTime__c</fullName>
    <description>Total Installation Time for all Products (RVN) in the Delivery Batch</description>
    <label>Batch Installation Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>