force-app/main/default/objects/Delivery_Batch__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <description>The Number of the Delivery Batch</description>
    <inlineHelpText>The Number of the Delivery Batch</inlineHelpText>
    <label>Delivery Batch Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>