force-app/main/default/objects/Delivery_Batch__c/fields/BatchOrderDate__c.field-meta.xml
<CustomField>
    <fullName>BatchOrderDate__c</fullName>
    <description>The Planned or Actual Order Date for the Delivery Batch</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>