force-app/main/default/objects/Delivery_Batch__c/fields/BatchPromisedDate__c.field-meta.xml
<CustomField>
    <fullName>BatchPromisedDate__c</fullName>
    <description>The Date when Delivery and Installation is expected to by Completed for the Delivery Batch</description>
    <label>Promised Date</label>
    <type>Date</type>
</CustomField>