force-app/main/default/objects/Delivery_Batch__c/fields/BatchStatus__c.field-meta.xml
<CustomField>
    <fullName>BatchStatus__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Data imported</fullName>
            </value>
            <value>
                <fullName>Work partially scheduled</fullName>
            </value>
            <value>
                <fullName>All work scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>