force-app/main/default/objects/Delivery_Batch__c/fields/Building_Project__c.field-meta.xml
<CustomField>
    <fullName>Building_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Project</label>
    <referenceTo>Building_Project__c</referenceTo>
    <relationshipLabel>Delivery Batches</relationshipLabel>
    <relationshipName>Delivery_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>