force-app/main/default/objects/Delivery_Batch__c/fields/DeliveryBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryBatchNumber__c</fullName>
    <label>Delivery Batch Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>