force-app/main/default/objects/Delivery_Batch__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Generates the Display Name to be used in the Delivery Batch selection in work splitting screen flow.</description>
    <formula>&quot;[&quot; &amp;  TEXT(Batch_Number__c)  &amp; &quot;] &quot; &amp;  Batch_Name__c &amp; &quot; (&quot; &amp; TEXT(Batch_Status__c) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name OLD</label>
    <type>Text</type>
</CustomField>