force-app/main/default/objects/Delivery_Batch__c/fields/Estimated_Work_Duration_Total__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Work_Duration_Total__c</fullName>
    <description>Estimate from Salestori.</description>
    <label>Estimated Work Duration Total OLD</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>