force-app/main/default/objects/Delivery_Batch__c/fields/hasInstallation__c.field-meta.xml
<CustomField>
    <fullName>hasInstallation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate Installation is required</description>
    <label>hasInstallation</label>
    <type>Checkbox</type>
</CustomField>