force-app/main/default/objects/Delivery_Batch__c/fields/hasOpportunity__c.field-meta.xml
<CustomField>
    <fullName>hasOpportunity__c</fullName>
    <description>Indicates if there is a related Opportunity</description>
    <formula>IF(ISBLANK(Opportunity__c) ,FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hasOpportunity</label>
    <type>Checkbox</type>
</CustomField>