force-app/main/default/objects/Delivery_Batch__c/fields/Identifiers__c.field-meta.xml
<CustomField>
    <fullName>Identifiers__c</fullName>
    <formula>OfferNumber__c +&quot;/&quot;+ProjectNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifiers</label>
    <type>Text</type>
</CustomField>