force-app/main/default/objects/Delivery_Batch__c/fields/Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Address OLD</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Delivery Batches</relationshipLabel>
    <relationshipName>Delivery_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>