force-app/main/default/objects/Delivery_Batch__c/fields/isImported__c.field-meta.xml
<CustomField>
    <fullName>isImported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the record is created by Integration</description>
    <label>isImported OLD</label>
    <type>Checkbox</type>
</CustomField>