force-app/main/default/objects/Delivery_Batch__c/fields/Number_of_Completed_WOLIs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_WOLIs__c</fullName>
    <description>Number of completed WOLIs related to Delivery Batch via a WO.</description>
    <label>Number of Completed WOLIs OLD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>