force-app/main/default/objects/Delivery_Batch__c/fields/NumberOfCompletedInstallations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCompletedInstallations__c</fullName>
    <description>Number of completed Installations for the Delivery Batch</description>
    <label>Number of Completed Installations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>