force-app/main/default/objects/Delivery_Batch__c/fields/NumberOfPlannedInstallations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPlannedInstallations__c</fullName>
    <description>Total number of Planned Installations in the Delivery Batch</description>
    <label>Number of Installations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>