force-app/main/default/objects/Delivery_Batch__c/fields/NumberOfStartedInstallations__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStartedInstallations__c</fullName>
    <description>Number of started Installations for the Delivery Batch</description>
    <label>Number of Started Installations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>