force-app/main/default/objects/Delivery_Batch__c/fields/OfferId__c.field-meta.xml
<CustomField>
    <fullName>OfferId__c</fullName>
    <description>Id of the Offer from Salestori.</description>
    <label>Offer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>