force-app/main/default/objects/Delivery_Batch__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Delivery Batches</relationshipLabel>
    <relationshipName>LumonDeliveryBatches</relationshipName>
    <type>Lookup</type>
</CustomField>