force-app/main/default/objects/Delivery_Batch__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Order_Types</valueSetName>
    </valueSet>
</CustomField>