force-app/main/default/objects/Delivery_Batch__c/fields/Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_Date__c</fullName>
    <label>Planned Delivery OLD</label>
    <type>Date</type>
</CustomField>