force-app/main/default/objects/Delivery_Batch__c/fields/Planned_Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_Address__c</fullName>
    <label>Planned Installation Address OLD</label>
    <type>Address</type>
</CustomField>