force-app/main/default/objects/Delivery_Batch__c/fields/Planned_Installation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_End_Date__c</fullName>
    <label>Planned Installation End Date OLD</label>
    <type>Date</type>
</CustomField>