force-app/main/default/objects/Delivery_Batch__c/fields/Planned_Installation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Installation_Start_Date__c</fullName>
    <label>Planned Installation Start Date OLD</label>
    <type>Date</type>
</CustomField>