force-app/main/default/objects/Delivery_Batch__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Quote (Offer) this Delivery Batch belongs to</description>
    <inlineHelpText>The Quote (Offer) this Delivery Batch belongs to</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Delivery Batches</relationshipLabel>
    <relationshipName>Delivery_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>