force-app/main/default/objects/Delivery_Batch__c/fields/SalesToriUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>SalesToriUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>SalesToriUniqueKey OLD</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>