force-app/main/default/objects/Delivery_Batch__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory OLD</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Delivery Batches</relationshipLabel>
    <relationshipName>Delivery_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>