force-app/main/default/objects/Delivery_Batch__c/fields/Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed__c</fullName>
    <description>Percentage of how much of the work is done.</description>
    <formula>Number_of_Completed_WOLIs__c / Number_of_Related_WOLIs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Completed OLD</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>