force-app/main/default/objects/Delivery_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Identifiers__c</columns>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>BatchStatus__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>