force-app/main/default/objects/Delivery_Batch__c/listViews/All_Delivery_Batches.listView-meta.xml
<ListView>
    <fullName>All_Delivery_Batches</fullName>
    <columns>NAME</columns>
    <columns>Planned_Installation_Address__Street__s</columns>
    <columns>Batch_Number__c</columns>
    <columns>Batch_Name__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>Planned_Installation_Start_Date__c</columns>
    <columns>Planned_Installation_End_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Delivery Batches</label>
</ListView>