force-app/main/default/objects/Delivery_Batch__c/listViews/Imported_Batches.listView-meta.xml
<ListView>
    <fullName>Imported_Batches</fullName>
    <columns>Identifiers__c</columns>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>BatchStatus__c</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch_Status__c</field>
        <operation>equals</operation>
        <value>Data imported</value>
    </filters>
    <label>Imported Batches</label>
</ListView>