force-app/main/default/objects/Delivery_Batch__c/listViews/My_Delivery_Batches.listView-meta.xml
<ListView>
    <fullName>My_Delivery_Batches</fullName>
    <columns>NAME</columns>
    <columns>Planned_Installation_Address__Street__s</columns>
    <columns>Account__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>Batch_Installation_Date__c</columns>
    <columns>BatchInstallationDate__c</columns>
    <columns>Batch_Installation_Start__c</columns>
    <columns>BatchInstallationStart__c</columns>
    <columns>NumberOfPlannedInstallations__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Delivery Batches</label>
</ListView>